<resources>
    <string name="app_name">Petagram</string>
    <string name="numerodelike">5</string>
    <string name="nombremascota">Nuestra Mascota</string>
    <string name="estrella">estrella</string>
    <string name="contacto">Contacto</string>
    <string name="acerca_de">Acerca de</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_pedro_franco">By Pedro Franco</string>
    <string name="nombre">Nombre</string>
    <string name="mensaje">Mensaje</string>
    <string name="email">Email</string>
    <string name="enviar_comentario">Enviar Comentario</string>
</resources>